--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,6 @@ body {
   font-family: "Pixelify Sans", sans-serif;
   margin: 0;
   min-width: 320px;
-  background: black;
+  background: #121212;
   color: white;
 }
